--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,10 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="icon" href="/food-logo.jpg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	%sveltekit.head%
+	<title>Food Ninja</title>
 </head>
 
 <body class="text-gray-600 font-body">
